--- a/src/scss/components/_popup.scss
+++ b/src/scss/components/_popup.scss
@@ -1,8 +1,8 @@
 .popup {
   position: fixed;
   pointer-events: none;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: 200;
   top: 0;
   left: 0;
@@ -10,27 +10,26 @@
   backdrop-filter: blur(3px);
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 
   &__wrapper {
-    height: 100%;
-    min-height: 500px;
+    min-height: 100%;
     box-sizing: border-box;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-bottom: 40px;
     transform: translate(0, 100%);
     transition: transform 0.6s ease-in-out;
   }
 
   &__form {
+    background-color: var(--background-color);
+    margin: 20px 0;
     max-width: 80%;
     padding: 40px;
     border-radius: 15px;
-    background-color: var(--background-color);
     box-shadow: 0px 0px 6px 3px rgba(255, 255, 255, 0.35);
-
     @media (max-width: 767.9px) {
       padding-right: 20px;
       padding-left: 20px;
